--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "canvas-preset": "^3.3.5",
     "gatsby": "^2.31.0",
+    "gatsby-plugin-google-analytics": "^3.14.0",
+    "gatsby-plugin-google-gtag": "^3.14.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-source-filesystem": "^3.14.0",
