--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
   },
   "dependencies": {
     "canvas-preset": "^3.3.5",
-    "gatsby": "^2.31.0",
+    "gatsby": "^4.12.1",
     "gatsby-plugin-google-analytics": "^3.14.0",
     "gatsby-plugin-google-gtag": "^3.14.0",
     "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^3.0.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-remark": "^4.11.0",
+    "gsap": "^3.10.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "recoil": "^0.1.2",
     "recoil-outside": "^0.1.1",
+    "scene-preset": "^2.4.4",
     "ssr-window": "^3.0.0"
   },
   "devDependencies": {
